# TermoteBackend

./: .gitignore  Cargo.toml  README.md  install.ps1  start.ps1  start.sh  termote-ban-list.ps1  termote-unban.ps1  termote-update.ps1
.claude/: settings.local.json
.next/: trace  trace-build
.omc/: project-memory.json
.omc/state/: agent-replay-a3bb5de3-2e3b-4884-8d31-9e703f87f17d.jsonl  agent-replay-b39affe3-7eae-49c1-a1cd-601041acd137.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-04-10T10-29-21-545Z.json  checkpoint-2026-04-10T13-08-18-846Z.json  checkpoint-2026-04-15T09-57-33-778Z.json
src/: auth.rs  lib.rs  main.rs  messages.rs  pty_manager.rs  state.rs  ws_handler.rs
