[package]
name = "termote"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }

# PTY management
portable-pty = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for pane IDs
uuid = { version = "1.0", features = ["v4"] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# HTTP utilities (CORS)
tower-http = { version = "0.5", features = ["cors"] }

# URL encoding
urlencoding = "2.1"

# Open URLs in browser
open = "5.2"

# Futures utilities (for StreamExt)
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Native file/folder dialogs
rfd = "0.14"

[profile.release]
opt-level = 3
lto = true
